<resources>
    <string name="app_name">QuizApp</string>
    <string name="_1_questions_list">1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable1. Kotlin Strings are mutable</string>
    <string name="_2_questions_list">2. Kotlin data types are object type</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="i_am_not_sure">I am not sure</string>
    <string name="btn_skip">skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="score">0/15</string>
    <string name="your_score">Your Score</string>
    <string name="btn_result_analysis">result analysis</string>
    <string name="btn_try_again">try again</string>
    <string name="result_analysis">Result Analysis</string>
    <string name="please_provide_answer_toast_message">Pleas select your answer from the choice.</string>
    <string name="quiz1_explanation"><![CDATA[<b>Explanation:</b> Android is a software package and linux based operating system for mobile devices such as tablet computers and smartphones.]]></string>
</resources>