<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:ignore="UselessParent"
        tools:context=".ui.MainActivity">
        <RelativeLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="30sp" />
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-black"
                android:id="@+id/tv_score"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@id/title_container"
            android:id="@+id/top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/tv_question"
                android:text="@string/_1_questions_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/question_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radio_q1_a"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:text="@string/true_answer"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/radio_q1_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/false_answer"/>
                    <RadioButton
                        android:id="@+id/radio_q1_c"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/i_am_not_sure"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/radio_q1_d"
                        android:layout_width="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/i_am_not_sure"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_qstn_skip"
                android:onClick="skipQuestion"
                android:text="@string/btn_skip"
                android:layout_marginEnd="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_qstn_next"
                android:onClick="nextQuestion"
                android:text="@string/next"
                android:layout_marginStart="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>