<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/your_score"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/tv_score"
                android:text="@string/_1_questions_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/layoutDots"
            android:alpha=".5"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_try_again"
                android:onClick="skipQuestion"
                android:text="@string/btn_try_again"
                android:layout_marginEnd="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_result_analysis"
                android:onClick="nextQuestion"
                android:text="@string/btn_result_analysis"
                android:layout_marginStart="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>